tests/multiple_ingress_objects_with_different_ports/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  namespace: ingressworld
spec:
  rules:
  - host: ingress.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-world
            port:
              number: 8090
